<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Portal Waiting List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_mail">feedback@ghostflying.com</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="summary">Summary</string>
    <string name="account">Account</string>
    <string name="default_passed_count">0</string>
    <string name="default_rejected_count">0</string>
    <string name="default_waiting_count">0</string>
    <string name="default_time_in_day">Last updated: 11:11</string>
    <string name="default_time_in_day_of_week">Last updated: Fri.</string>
    <string name="default_time_in_date">Last updated: Jul. 8</string>
    <string name="default_mail_address">user@gmail.com</string>
    <string name="preference_name">preference</string>
    <string name="default_portal_name">Portal Name</string>
    <string name="day_ago">" day(s) ago"</string>
    <string name="default_date_diff">10</string>
    <string name="last_update">"Last update:  "</string>
    <string name="alert_no_choose_account">You must pick an account to continue.</string>
    <string name="refresh_done">Refresh done.</string>
    <string name="refresh_result_nothing">Nothing updated.</string>
    <string name="refresh_result_proposed">" new proposed events."</string>
    <string name="refresh_result_accepted">" new accepted events."</string>
    <string name="refresh_result_rejected">" new rejected events."</string>

    <!-- filter drawer -->
    <string name="filter_drawer_title">Portals Filter</string>
    <string name="everything">Everything</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="waiting">Waiting</string>
    <string name="order">Order</string>
    <string name="smart_order">Smart</string>
    <string name="last_asc_order">Asc by last</string>
    <string name="last_desc_order">Desc by last</string>
    <string name="proposed_asc_order">Asc by propose</string>
    <string name="proposed_desc_order">Desc by propose</string>
    <string name="alphabetical_order">AlphaBet</string>
    <string name="alert_to_refresh">First time? Please wait refreshing.</string>
    <string name="network_error">Network error, please make sure a reliable connection.</string>
    <string name="auth_error">Authorization Error, need to grant again.</string>

    <!-- portal detail fragment -->
    <string name="last_update_in_detail">Last update</string>
    <string name="status">Status</string>
    <string name="default_status">Default status</string>
    <string name="portal_address">Address(click to view on intel)</string>
    <string name="default_portal_address">N/A</string>
    <string name="default_operation_result">Default operation result</string>
    <string name="default_operation_type">Default operation type</string>
    <string name="default_operation_date">1995/07/08</string>
    <string name="operation_type_submission">Submission</string>
    <string name="operation_type_edit">Edit</string>
    <string name="operation_type_invalid">Invalid report</string>
    <string name="operation_result_proposed">proposed</string>
    <string name="operation_result_accepted">accepted</string>
    <string name="operation_result_rejected">rejected</string>
    <string name="operation_result_duplicate">duplicated</string>
    <string name="space">" "</string>
    <string name="share">Share</string>
    <string name="write_error_toast">Write image file failed.</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_default_account">default@ghostflying.com</string>
    <string name="navigation_drawer_portal_list">Portal List</string>
    <string name="navigation_drawer_all_portals">All</string>
    <string name="navigation_drawer_submission_portals">Submission</string>
    <string name="navigation_drawer_edit_portals">Edit</string>
    <string name="navigation_drawer_default_portal_count">0</string>
    <string name="navigation_drawer_setting">Settings</string>
    <string name="navigation_drawer_feedback">Feedback</string>
    <string name="navigation_drawer_avatar_default_text">G</string>
    <string name="navigation_drawer_send">Send Feedback</string>
    <string name="navigation_drawer_feedback_subject">Portal waiting list feedback</string>

    <!-- setting activity -->
    <string name="title_activity_setting">Settings</string>
    <string name="setting_about">Made by a member of Hangzhou Resistance, China</string>
    <string name="setting_thank">Thank you for all your support!</string>
    <string name="setting_version">"version "</string>
    <string name="setting_default_version_name">version 0.1</string>
    <string name="setting_appearance">Appearance</string>
    <string name="setting_image_toggle">Show portal images</string>
    <string name="setting_show_status_in_list">Show status icon of portals</string>
    <string name="setting_smart_order">Smart order settings</string>
    <string name="setting_smart_order_short_time">Days of short time</string>
    <string name="setting_other_sort">Other sort</string>
    <string name="setting_force_chinese">Treat locale as Chinese</string>
    <string name="setting_smart_order_short_time_describe">        The reviewed portals in the short time will be showed on the top.</string>
    <string name="setting_smart_order_time_days">" days"</string>
    <string name="setting_smart_order_short_time_default_value">7</string>
    <string name="setting_smart_order_long_time">Days of long time</string>
    <string name="setting_smart_order_long_time_describe">        The portals have no response over the long time will be showed on the end.</string>
    <string name="setting_smart_order_long_time_default_value">365</string>
    <string name="setting_smart_order_waiting_sort_order">Inverse the sort of waiting portals</string>
    <string name="setting_smart_order_default_sort_order">@string/last_asc_order</string>
    <string name="setting_short_time_dialog_title">Days of short time</string>
    <string name="setting_long_time_dialog_title">Days of long time</string>
    <string name="setting_default_sort_dialog_title">Choose default sort method</string>

    <string-array name="sort_method_exclude_smart">
        <item>@string/last_desc_order</item>
        <item>@string/last_asc_order</item>
    </string-array>

    <!-- Days Picker Fragment -->
    <string name="positive_button">@android:string/ok</string>
    <string name="negative_button">@android:string/cancel</string>
    <string name="days_picker_fragment_days">Days</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Search -->
    <string name="search_hint">Portal name</string>
    <string name="action_search">search</string>


    <!-- Redesign detail activity-->
    <string name="date_for">" for "</string>
    <string name="days">" day(s)"</string>
    <string name="days_ago">" days ago"</string>
    <string name="default_event_date">1995/07/08(1000 days ago)</string>
    <string name="default_event_description">Submission proposed</string>
    <string name="event_description_submission">Submission</string>
    <string name="event_description_edit">Edit</string>
    <string name="event_description_invalid">Invalid report</string>
    <string name="event_description_proposed">" proposed"</string>
    <string name="event_description_accepted">" accepted"</string>
    <string name="event_description_duplicated">" duplicated"</string>
    <string name="event_description_rejected">" rejected"</string>
    <string name="event_description_too_close">" too close"</string>
    <string name="map">Map</string>

    <!-- ScreenShot dialog -->
    <string name="process_screen_shot">ScreenShot is generating, please wait for a while.</string>
</resources>
