<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/cardview_vertical_margin"
    android:layout_marginLeft="@dimen/cardview_horizontal_margin"
    android:layout_marginRight="@dimen/cardview_horizontal_margin"
    auto:cardElevation="@dimen/card_elevation"
    auto:cardCornerRadius="@dimen/card_corner_radius">

    <com.andexert.library.RippleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        auto:rv_color="@color/ripple_material_light"
        auto:rv_rippleDuration="@integer/ripple_effect_duration"
        auto:rv_type="rectangle">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/portal_detail_card_content_margin_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_operation_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_operation_type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space"/>

            <TextView
                android:id="@+id/text_operation_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_operation_result"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/text_operation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_operation_date"/>

        </LinearLayout>

    </com.andexert.library.RippleView>


</android.support.v7.widget.CardView>