<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ripple="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:text="@string/setting_smart_order"
        android:textColor="@color/setting_item_group_title_text"
        android:layout_marginTop="@dimen/setting_item_group_title_margin_vertical"
        android:layout_marginLeft="@dimen/setting_item_group_title_margin_horizon"
        android:layout_marginRight="@dimen/setting_item_group_title_margin_horizon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- default sort order for waiting portals -->
    <com.andexert.library.RippleView
        android:id="@+id/setting_inverse_sort_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ripple:rv_rippleDuration="@integer/ripple_effect_duration"
        ripple:rv_type="rectangle"
        ripple:rv_color="@color/ripple_material_light">

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/setting_item_group_title_margin_vertical"
            android:paddingBottom="@dimen/setting_item_group_title_margin_vertical"
            android:paddingLeft="@dimen/setting_item_group_title_margin_horizon"
            android:paddingRight="@dimen/setting_item_group_title_margin_horizon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/setting_smart_order_waiting_sort_order"
                    android:textSize="@dimen/setting_item_text_size"
                    android:textColor="@color/setting_item_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/setting_smart_order_sort_value"
                    android:text="@string/setting_smart_order_default_sort_order"
                    android:layout_marginTop="@dimen/setting_item_sub_text_margin_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Space
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <CheckBox
                android:id="@+id/setting_smart_order_inverse_toggle"
                android:checked="true"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </com.andexert.library.RippleView>

    <include layout="@layout/setting_separator"/>

    <!-- short time setting -->
    <com.andexert.library.RippleView
        android:id="@+id/setting_short_time_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ripple:rv_rippleDuration="@integer/ripple_effect_duration"
        ripple:rv_type="rectangle"
        ripple:rv_color="@color/ripple_material_light">

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/setting_item_group_title_margin_vertical"
            android:paddingBottom="@dimen/setting_item_group_title_margin_vertical"
            android:paddingLeft="@dimen/setting_item_group_title_margin_horizon"
            android:paddingRight="@dimen/setting_item_group_title_margin_horizon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/setting_smart_order_short_time"
                android:textSize="@dimen/setting_item_text_size"
                android:textColor="@color/setting_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/setting_smart_order_short_time_describe"
                android:layout_marginTop="@dimen/setting_item_sub_text_margin_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/setting_item_sub_text_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_smart_order_short_time_value"
                    android:text="@string/setting_smart_order_short_time_default_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/setting_smart_order_time_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </com.andexert.library.RippleView>

    <include layout="@layout/setting_separator"/>

    <!-- long time setting -->
    <com.andexert.library.RippleView
        android:id="@+id/setting_long_time_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ripple:rv_rippleDuration="@integer/ripple_effect_duration"
        ripple:rv_type="rectangle"
        ripple:rv_color="@color/ripple_material_light">

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/setting_item_group_title_margin_vertical"
            android:paddingBottom="@dimen/setting_item_group_title_margin_vertical"
            android:paddingLeft="@dimen/setting_item_group_title_margin_horizon"
            android:paddingRight="@dimen/setting_item_group_title_margin_horizon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/setting_smart_order_long_time"
                android:textSize="@dimen/setting_item_text_size"
                android:textColor="@color/setting_item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/setting_smart_order_long_time_describe"
                android:layout_marginTop="@dimen/setting_item_sub_text_margin_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/setting_item_sub_text_margin_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_smart_order_long_time_value"
                    android:text="@string/setting_smart_order_long_time_default_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/setting_smart_order_time_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </com.andexert.library.RippleView>


</LinearLayout>