<?xml version="1.0" encoding="utf-8"?>
<com.andexert.library.RippleView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/cardview_horizontal_margin"
    android:layout_marginRight="@dimen/cardview_horizontal_margin"
    android:layout_marginBottom="@dimen/rippleview_vertical_margin"
    auto:rv_rippleDuration="@integer/ripple_effect_duration"
    auto:rv_type="rectangle"
    auto:rv_color="@color/ripple_material_light">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/cardview_vertical_margin_ripple_view"
        auto:cardCornerRadius="@dimen/card_corner_radius"
        auto:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/portal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/portal_list_name_margin"
                android:text="@string/default_portal_name"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/portal_list_last_updated_margin"
                android:layout_marginLeft="@dimen/portal_list_name_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update"/>

                <TextView
                    android:id="@+id/portal_last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_date_diff"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_ago"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/portal_event_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</com.andexert.library.RippleView>